# qias-mawarith-rag

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  environment.yaml  pyproject.toml  requirements.txt
config/: rag_config.yaml
data/eval/: qias2025_almawarith_part1.json  qias2025_almawarith_part61.json
data/pdfs/: ARABIC_BOOKS_CATALOG.md  README_BOOKS.md
data/synthetic/: synthetic_mawarith_part01.json  synthetic_mawarith_part02.json  synthetic_mawarith_part03.json  synthetic_mawarith_part04.json  synthetic_mawarith_part05.json  synthetic_mawarith_part06.json  synthetic_mawarith_part07.json  synthetic_mawarith_part08.json  synthetic_mawarith_part09.json  synthetic_mawarith_part10.json
data/train/: qias2025_almawarith_part2.json
docs/: COLAB_QUICK_START.md  COLAB_README.md  COLAB_TRAINING_USAGE.md  COMPREHENSIVE_MULTI_SOURCE_RAG_REPORT.txt  PROJECT_ORGANIZATION.md  QIAS_TRAIN_SET_ENHANCEMENT_REPORT.md  RAG_RELEVANCE_EVALUATION_README.md  README_Multi_Source_RAG_Evaluation.md  TRAINING_GUIDE.md
notebooks/: Multi_Source_RAG_Evaluation_Colab.ipynb  QIAS_RAG_Colab.ipynb  QIAS_RAG_HF.ipynb  QIAS_RAG_Minimal_Colab.ipynb  QIAS_RAG_Training_Colab.ipynb  QIAS_RAG_Training_Local.ipynb  requirements.txt
qias_mawarith_rag/: __init__.py  pipeline.py  workers.py
qias_mawarith_rag/calculator/: Fiqh_rules_algorithm.md  Fiqh_rules_graph.md  README.md  __init__.py  case.py  edge_case.md  models.py  parser.py
qias_mawarith_rag/datagen/: __init__.py  arabic.py  exporter.py  generator.py  howto.txt  synthetic_generator.py  validator.py
qias_mawarith_rag/evaluation/: mir_e_wrapper.py  relevance_evaluator.py
qias_mawarith_rag/generation/: evaluator.py  output_parser.py  qwen3_client.py  qwen_hf_client.py  thinking_extractor.py  unsloth_client.py
qias_mawarith_rag/knowledge/: __init__.py  pdf_processor.py  synthetic_ingester.py  vector_store.py  web_search.py
qias_mawarith_rag/retrieval/: hybrid_retriever.py  prompt_builder.py  reranker.py
qias_mawarith_rag/training/: __init__.py  feedback_loop.py  fine_tune.py
scripts/: README.md  build_prediction.py  download_arabic_pdfs.py  download_pdfs.py  initialize_rag.py  run_dev.sh  run_pipeline.py  train.py  verify_setup.py
scripts/colab/: colab_auth_fix.py  colab_training.py
scripts/dev/: debug_qwen.py  fix_corrupted_text_solution.py  quick_model_test.py  quick_test.py  (+3 more)
src/: rag_pipeline.py
tests/: conftest.py  test_calculator.py  test_colab_fix.py  test_config_mapping.py  test_corrupted_text.py  test_eager_attention.py  test_flash_attention.py  test_model_load.py  test_model_loading.py  test_output_parser.py  test_performance.py  test_pipeline.py  test_qwen_config.py  test_rag_pipeline.py  test_without_flash.py
(+53 files in other folders)
